--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -1,23 +1,23 @@
 /** options.less */
 
-@breakpointToJs          : true;   // make the current breakpoint accessible in JS
-@fullColorPalette        : true;   // switch between a full or optimized color palette
-@rootFontSize            : 10px;   // 10px | 0.625em;
-@maximumPageWrapperWidth : 100rem; // the maximum width of the .wrapper layout utility (2rem padding left & right)
-@defaultBorderRadius     : 2;      // border radius, multiplicand: 1 PX
-@sizingSteps             : 60;     // steps for width & height utility classes, multiplicand: 1 REM
-@responsiveSizingSteps   : 60;     // steps for responsive width & height utility classes
-@sizingMultiplicand      : 1rem;   // multiplicand for width & height utility classes
-@spacingSteps            : 60;     // steps for margin & padding utility classes, multiplicand: 0.5 REM
-@responsiveSpacingSteps  : 60;     // steps for responsive margin & padding utility classes, multiplicand: 0.5 REM
-@spacingMultiplicand     : 0.5rem; // multiplicand for margin & padding utility classes
-@positionSteps           : 10;     // steps for micro-positioning utility classes, multiplicand: 1 PX
-@responsivePositionSteps : 10;     // steps for responsive micro-positioning utility classes, multiplicand: 1 PX
-@animationDuration       : 0.5;    // default css animation duration
-@cdnDomain               : 'cdn.yoshino.digital'; // source for external images
+@breakpointToJs           : true;   // make the current breakpoint accessible in JS
+@fullColorPalette         : true;   // switch between a full or optimized color palette
+@rootFontSize             : 10px;   // 10px | 0.625em;
+@maximumPageWrapperWidth  : 100rem; // the maximum width of the .wrapper layout utility (2rem padding left & right)
+@defaultBorderRadius      : 2;      // border radius, multiplicand: 1 PX
+@sizingSteps              : 60;     // steps for width & height utility classes, multiplicand: 1 REM
+@responsiveSizingSteps    : 60;     // steps for responsive width & height utility classes
+@sizingMultiplicand       : 1rem;   // multiplicand for width & height utility classes
+@spacingSteps             : 60;     // steps for margin & padding utility classes, multiplicand: 0.5 REM
+@responsiveSpacingSteps   : 60;     // steps for responsive margin & padding utility classes, multiplicand: 0.5 REM
+@spacingMultiplicand      : 0.5rem; // multiplicand for margin & padding utility classes
+@positionSteps            : 10;     // steps for micro-positioning utility classes, multiplicand: 1 PX
+@responsivePositionSteps  : 10;     // steps for responsive micro-positioning utility classes, multiplicand: 1 PX
+@defaultAnimationDuration : 200ms;  // default css animation duration in milliseconds
+@cdnDomain                : 'cdn.yoshino.digital'; // source for external images
 
 // debugging
 
-@showBreakpoint          : false;  // display the active breakpoint on each page
-@showGuides              : false;  // show both vertically and horizontally centered guides
-@debugImages             : false;  // highlight images without alt- or title-attributes
+@showBreakpoint           : false;  // display the active breakpoint on each page
+@showGuides               : false;  // show both vertically and horizontally centered guides
+@debugImages              : false;  // highlight images without alt- or title-attributes
