tweak opacity utilitities

--- a/src/less/utilities/opacity-interactive.less
+++ b/src/less/utilities/opacity-interactive.less
@@ -1,6 +1,8 @@
 /** op-interactive.less */
 
-.hvr--op-full:hover { .op-full; }
+.hvr--op-opaque:hover { .op-opaque; }
+.hvr--op-transparent:hover { .op-transparent; }
+
 .hvr--op-9:hover    { .op-9; }
 .hvr--op-8:hover    { .op-8; }
 .hvr--op-7:hover    { .op-7; }
