--- a/src/less/utilities/opacity-base.less
+++ b/src/less/utilities/opacity-base.less
@@ -1,6 +1,8 @@
 /** op-base.less */
 
-.op-full { opacity: 1 !important; }
+.op-transparent { opacity: 1 !important; }
+.op-opaque      { opacity: 0 !important; }
+    
 .op-9    { opacity: .9 !important; }
 .op-8    { opacity: .8 !important; }
 .op-7    { opacity: .7 !important; }
