--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -147,3 +147,16 @@
 .z-8  { z-index: 800 !important; }
 .z-9  { z-index: 900 !important; }
 .z-10 { z-index: 1000 !important; }
+
+// z-index 3D
+
+.z-3d-1  { transform: translateZ(1px); }
+.z-3d-2  { transform: translateZ(2px); }
+.z-3d-3  { transform: translateZ(3px); }
+.z-3d-4  { transform: translateZ(4px); }
+.z-3d-5  { transform: translateZ(5px); }
+.z-3d-6  { transform: translateZ(6px); }
+.z-3d-7  { transform: translateZ(7px); }
+.z-3d-8  { transform: translateZ(8px); }
+.z-3d-9  { transform: translateZ(9px); }
+.z-3d-10 { transform: translateZ(10px); }
