--- a/src/less/utilities/layout-responsive.less
+++ b/src/less/utilities/layout-responsive.less
@@ -101,6 +101,19 @@
     .@{bpPrefix}--z-9  { .z-9; }
     .@{bpPrefix}--z-10 { .z-10; }
     
+    // z-index 3D
+
+    .@{bpPrefix}z-3d-1  { .z-3d-1; }
+    .@{bpPrefix}z-3d-2  { .z-3d-2; }
+    .@{bpPrefix}z-3d-3  { .z-3d-3; }
+    .@{bpPrefix}z-3d-4  { .z-3d-4; }
+    .@{bpPrefix}z-3d-5  { .z-3d-5; }
+    .@{bpPrefix}z-3d-6  { .z-3d-6; }
+    .@{bpPrefix}z-3d-7  { .z-3d-7; }
+    .@{bpPrefix}z-3d-8  { .z-3d-8; }
+    .@{bpPrefix}z-3d-9  { .z-3d-9; }
+    .@{bpPrefix}z-3d-10 { .z-3d-10; }
+
 }
 
 // small
