--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -151,7 +151,7 @@
         width: 4rem;
     }
     
-    // standard button Constructor
+    // standard button
     
     .constr-btn(
         @bgGradientTopColor: @color-base-24,
