--- a/docs/_includes/pagefooter.html
+++ b/docs/_includes/pagefooter.html
@@ -6,7 +6,7 @@
         <p class="lh-5">
             <img class="d-inlineblock h-3 m-r-1 val-t" src="{{ site.github.url }}/assets/img/logo-yoshino-mono.svg" />
             <span class="val-t">&copy; {{ "now" | date: "%Y" }}</span>
-            <a class="val-t" href="http://yoshino.digital">Yoshino.digital GmbH</a>
+            <a  class="val-t tdr-none hvr--tdr-underline" href="http://yoshino.digital">Yoshino.digital GmbH</a>
         </p>
     </div>
 </footer>
