--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -23,7 +23,7 @@
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
         {% include metamenu.html %}
-        <div class="wrapper flx">
+        <div class="wrapper flx m-t-10">
             <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flx-2 l--flx-1">
                 {% include menu.html %}
             </nav>
