--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -4,14 +4,13 @@
             <img class="h-2" src="{{ site.github.url }}/assets/img/logo-yoi-small.svg" />
         </a>
     </p>
-    <p class="flx-grow al-r">
-        {% if page.title == 'Index' %}
-            <a href="{{ site.github.url }}/start/" class="btn btn--subtle">Documentation</a>
-        {% endif %}
+    <p class="flx-grow al-r fs-0">
         <a href="{{ site.github.repository_url }}" class="btn btn--subtle">GitHub</a>
-        <a href="{{ site.github.zip_url }}" class="btn btn--primary">Download</a>
-        {% if page.title != 'Index' %}
-            <a href="#menu" class="btn btn--light btn--flat l--hidden" yoi-action="ScrollTo:#menu;">
+        {% if page.title == 'Index' %}
+            <a href="{{ site.github.url }}/start/" class="btn btn--subtle m-l-2">Documentation</a>
+            <a href="{{ site.github.zip_url }}" class="btn btn--primary m-l-2">Download</a>
+        {% else %}
+            <a href="#menu" class="btn btn--subtle m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                 <span class="hidden">Menu</span>
                 <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
             </a>
