--- a/src/less/core/mixins.less
+++ b/src/less/core/mixins.less
@@ -53,6 +53,10 @@
     user-select: none;
 }
 
+.mixin-defaultBorderRadius() {
+    border-radius: (@defaultBorderRadius * 1px);
+}
+
 .mixin--enable3d {
     
     /**
@@ -76,7 +80,6 @@
     
 }
 
-
 .mixin-icon-bg(@id; @width: 32; @height: 32; @fillColor: '000'; @strokeColor: '000') {
     
     /**
@@ -89,4 +92,57 @@
     @strokeColorHex : replace(@strokeColor, '#', '');
     background: transparent url(~'http://@{cdnDomain}/svg.php?id=@{id}&f=@{fillColorHex}&s=@{strokeColorHex}&w=@{relativeWidth}&h=@{relativeHeight}') center center no-repeat;
 
+}
+
+// accessabilty
+
+.mixin-defaultFocus() {
+    box-shadow: 0 0 0 2px fade(@focusColor,100%);
+    border-color: @blue-18;
+    outline: 0;
+}
+
+.mixin-tabFocus() {
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: tabFocus;
+    animation-timing-function: ease-out;
+    box-shadow: none;
+    outline-color: @focusColor;
+    outline-offset: 1rem;
+    outline-radius: @defaultBorderRadius * 1px;
+    outline-style: solid;
+    outline-width: 0.2rem;
+    z-index: 101;
+}
+
+.mixin-tabFocus-inset() {
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: tabFocusInset;
+    animation-timing-function: ease-out;
+}
+
+@keyframes tabFocus {
+    from {
+        outline-color: @focusColor;
+    } to {
+        outline-color: @color-transparent;
+    }
+}
+
+@keyframes tabFocusInset {
+    from {
+        box-shadow:
+            inset 2px 0 0 @focusColor,
+            inset 0 2px 0 @focusColor,
+            inset -2px 0 @focusColor,
+            inset 0 -2px 0 @focusColor
+    } to {
+        box-shadow:
+            inset 2px 0 0 @color-transparent,
+            inset 0 2px 0 @color-transparent,
+            inset -2px 0 @color-transparent,
+            inset 0 -2px 0 @color-transparent
+    }
 }
