--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -5,19 +5,18 @@
         </a>
     </p>
     <p class="flx-grow al-r fs-0">
-
-        <form class="search w-20 d-inlineblock pos-relative">
-            <input class="search__input z-3 pos-relative" type="text" />
-            <div id="searchOutput" class="box pos-absolute w-1-1 sh-4 z-2">
-                <div class="search__result w-1-1"></div>
-            </div>
-        </form>
-
-        <a href="{{ site.github.repository_url }}" class="btn btn--subtle">GitHub</a>
         {% if page.title == 'Index' %}
             <a href="{{ site.github.url }}/start/" class="btn btn--subtle m-l-2">Documentation</a>
             <a href="{{ site.github.zip_url }}" class="btn btn--primary m-l-2">Download</a>
         {% else %}
+            <form id="search" class="w-22 m--w-30 d-inlineblock pos-relative">
+                <input id="search-input" class="input--rounded" type="search" autocomplete="off" />
+                <div id="search-output" class="box pos-absolute w-1-1 sh-4 z-2 m-t-1">
+                    <div id="search-result" class="w-1-1">
+                        <p class="m-2 fs-2 c-base-15">Type a search term</p>
+                    </div>
+                </div>
+            </form>
             <a href="#menu" class="btn btn--subtle m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                 <span class="hidden">Menu</span>
                 <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
