--- a/src/components/button/buttondismiss.less
+++ b/src/components/button/buttondismiss.less
@@ -1,4 +1,4 @@
-/** btndismiss.less */
+/** buttondismiss.less */
 
 // block
 // =====
@@ -7,12 +7,7 @@
 
     .mixin-clearAppearance;
     .mixin-defaultBorderRadius;
-    .mixin-icon-bg(
-        @id: 'icon-006-s',
-        @fillColor: @color-base-8,
-        @width: 32,
-        @height: 32
-    );
+    .mixin-icon-bg(@id: 'icon-006-s', @fillColor: @color-base-8, @width: 32, @height: 32);
     border: 0;
     cursor: pointer;
     display: inline-block;
@@ -34,41 +29,6 @@
 // modifiers
 // =========
 
-// sizes
-
-.btnDismiss--small {
-    .mixin-icon-bg(
-        @id: 'icon-006-s',
-        @fillColor: @color-base-8,
-        @width: 16,
-        @height: 16
-    );
-    height: 1.6rem;
-    width: 1.6rem;
-}
-
-.btnDismiss--medium {
-    .mixin-icon-bg(
-        @id: 'icon-006-s',
-        @fillColor: @color-base-8,
-        @width: 24,
-        @height: 24
-    );
-    height: 2.4rem;
-    width: 2.4rem;
-}
-
-.btnDismiss--large {
-    .mixin-icon-bg(
-        @id: 'icon-006-s',
-        @fillColor: @color-base-8,
-        @width: 48,
-        @height: 48
-    );
-    height: 4.8rem;
-    width: 4.8rem;
-}
-
 // colors
 
 /*
@@ -82,7 +42,7 @@
 */
 
 .btnDismiss.btnDismiss--negative.btnDismiss--negative,
-[class*="--negative"] .btnDismiss {
+[class*="-negative"] .btnDismiss {
     .constr-btnDismiss(
         @iconColor: @color-negative-10,
         @bgColorHover: @color-negative-21
@@ -90,7 +50,7 @@
 }
 
 .btnDismiss.btnDismiss--positive.btnDismiss--positive,
-[class*="--positive"] .btnDismiss {
+[class*="-positive"] .btnDismiss {
     .constr-btnDismiss(
         @iconColor: @color-positive-10,
         @bgColorHover: @color-positive-21
@@ -98,7 +58,7 @@
 }
 
 .btnDismiss.btnDismiss--attention.btnDismiss--attention,
-[class*="--attention"] .btnDismiss {
+[class*="-attention"] .btnDismiss {
     .constr-btnDismiss(
         @iconColor: @color-attention-10,
         @bgColorHover: @color-attention-20
@@ -106,7 +66,7 @@
 }
 
 .btnDismiss.btnDismiss--dark.btnDismiss--dark,
-[class*="--dark"] .btnDismiss {
+[class*="-dark"] .btnDismiss {
     .constr-btnDismiss(
         @iconColor: @color-base-24,
         @bgColorHover: @color-base-7
@@ -128,33 +88,6 @@
     
     &:hover {
         background-color: fade(@bgColorHover, 50%);
-    }
-    
-    &.btnDismiss--small {
-        .mixin-icon-bg(
-            @id: 'icon-008-s',
-            @fillColor: @iconColor,
-            @width: 16,
-            @height: 16
-        )
-    }
-    
-    &.btnDismiss--medium {
-        .mixin-icon-bg(
-            @id: 'icon-008-s',
-            @fillColor: @iconColor,
-            @width: 24,
-            @height: 24
-        )
-    }
-    
-    &.btnDismiss--large {
-        .mixin-icon-bg(
-            @id: 'icon-008-s',
-            @fillColor: @iconColor,
-            @width: 48,
-            @height: 48
-        )
     }
     
 }
