--- a/src/components/button/buttonflat.less
+++ b/src/components/button/buttonflat.less
@@ -1,4 +1,4 @@
-/** button-flat.less */
+/** buttonflat.less */
 
 // base
 // ====
@@ -92,7 +92,11 @@
 // constructor
 // ===========
 
-.constr-btnFlat(@txtColor, @bgColor, @bgColorHover, @bgColorActive) {
+.constr-btnFlat(
+    @txtColor,
+    @bgColor,
+    @bgColorHover,
+    @bgColorActive) {
     
     background: @bgColor;
     color: @txtColor;
