--- a/src/components/button/buttonoutline.less
+++ b/src/components/button/buttonoutline.less
@@ -1,4 +1,4 @@
-/** button-outline.less */
+/** buttonoutline.less */
 
 // base
 // ====
@@ -108,7 +108,11 @@
 // constructor
 // ===========
 
-.constr-btnOutline(@txtColor, @borderColor, @borderColorHover, @borderColorActive) {
+.constr-btnOutline(
+    @txtColor,
+    @borderColor,
+    @borderColorHover,
+    @borderColorActive) {
 
     border-color: @borderColor;
     color: @txtColor;
