fix path to search.json

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -102,7 +102,7 @@
                     'searchInput': $('#search-input')[0],
                     'resultsContainer': $('#search-result')[0],
                     'noResultsText': '<p class="fs-2 p-2 c-red-15">No Results</p>',
-                    'json': '/search.json',
+                    'json': '{{ site.github.url }}/search.json',
                     'searchResultTemplate': '<a class="d-block lh-3 fs-2 c-base-8 tdr-none hvr--bg-base-25 p-2" href="{url}.html"><span class="c-base-15">{group}/ </span>{title}</a>'
                 });
 
