clean up & tweak start page layout

--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -1,7 +1,8 @@
 <div class="p-3 flx">
     <p class="flx-grow">
-        <a href="{{ site.github.url }}/">
-            <img class="h-2" src="{{ site.github.url }}/assets/img/logo-yoi-small.svg" />
+        <a class="tdr-none c-base-15" href="{{ site.github.url }}/">
+            <img class="h-2 pos-relative pos-t-2" src="{{ site.github.url }}/assets/img/logo-yoi-small.svg" />
+            <span class="fs-2 fw-bold pos-relative pos-b-2 pos-l-5">Yoi</span>
         </a>
     </p>
     <p class="flx-grow al-r fs-0">
