--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -53,7 +53,7 @@
         {% include pagefooter.html %}
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
         <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
-        <script src="https://unpkg.com/simple-jekyll-search@1.5.0/dest/simple-jekyll-search.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-jekyll-search/1.1.8/jekyll-search.js"></script>
         <script>
             $(function() {
 
