--- a/docs/_includes/pagefooter.html
+++ b/docs/_includes/pagefooter.html
@@ -1,8 +1,11 @@
-<footer class="bg-white flx c-base-15 p-4 p-t-15 l--p-t-30">
-    <div class="w-1-2">
-        <p class="lh-5">Yoi – the Yoshino Frontend Component Library</p>
+<footer class="bg-white flx flx-directionColumn m--flx-directionRow c-base-15 p-lr-4 p-t-15 l--p-t-30 p-b-10 m--p-b-4">
+    <div class="m--w-1-2 al-c m--al-l">
+        <p class="lh-5">
+            <a class="m-r-2 tdr-none hvr--tdr-underline" href="#">Yoi on GitHub</a>
+            <a class="tdr-none hvr--tdr-underline" href="#">Documentation</a>
+        </p>
     </div>
-    <div class="w-1-2 al-r">
+    <div class="m--w-1-2 al-c m--al-r">
         <p class="lh-5">
             <img class="d-inlineblock h-3 m-r-1 val-t" src="{{ site.github.url }}/assets/img/logo-yoshino-mono.svg" />
             <span class="val-t">&copy; {{ "now" | date: "%Y" }}</span>
