small fixes & correct typos, include sitemap

--- a/docs/_includes/pagefooter.html
+++ b/docs/_includes/pagefooter.html
@@ -1,8 +1,8 @@
 <footer class="bg-white flx flx-directionColumn m--flx-directionRow c-base-15 p-lr-4 p-t-15 l--p-t-30 p-b-10 m--p-b-4">
     <div class="m--w-1-2 al-c m--al-l">
         <p class="lh-5">
-            <a class="m-r-2 tdr-none hvr--tdr-underline" href="#">Yoi on GitHub</a>
-            <a class="tdr-none hvr--tdr-underline" href="#">Documentation</a>
+            <a class="m-r-2 tdr-none hvr--tdr-underline" href="https://github.com/yoshino-digital/yoi">Yoi on GitHub</a>
+            <a class="tdr-none hvr--tdr-underline" href="{{ site.github.url }}/start/">Documentation</a>
         </p>
     </div>
     <div class="m--w-1-2 al-c m--al-r">
